# Project-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
01-Projeto IA/: .env.example  .gitignore  README.md  app.py  requirements.txt  test_backend.py
01-Projeto IA/Modelo_V3/: MODEL_CARD.md  README.md  requirements.txt
01-Projeto IA/src/: __init__.py
01-Projeto IA/static/: app.js  styles.css
01-Projeto IA/templates/: index.html
data/processed/: factcheck_dataset_processed.csv
data/raw/: manifest.json  query_apuracao.csv  query_apuracao_votos.csv  query_apuracao_votos_tse.csv  query_bolsonaro.csv  query_bolsonaro_debate_verdadeiro.csv  query_bolsonaro_no_flow.csv  query_camisa_candidato_dia_eleicao.csv  query_camisa_candidato_eleicoes.csv  query_camiseta_candidato_eleicao.csv  query_campanha.csv  query_campanha_bolsonaro.csv  query_campanha_eleitoral_lula_bolsonaro.csv  query_campanha_lula.csv  query_campanha_lula_bolsonaro.csv  query_certo.csv  query_comprovado_bolsonaro.csv  query_confirma.csv  query_correto_lula.csv  query_debate.csv  query_debate_band.csv  query_debate_bolsonaro_lula.csv  query_debate_candidatos.csv  query_debate_eleitoral.csv  query_debate_eleitoral_lula_bolsonaro.csv  query_debate_lula_bolsonaro.csv  query_debate_presidencial.csv  query_debate_presidencial_lula_bolsonaro.csv  query_divida_lula_uniao.csv  query_e_real.csv  query_e_verdade_lula.csv  query_e_verdade_voto_impresso.csv  query_eleicao.csv  (+47 more)
scripts/: collect_trusted_true_news.py  train_model_v3.py
tests/: test_normalization.py  test_processing_and_split.py
(+22 files in other folders)
